--- a/bs-feladatok-sitebuilding/index.html
+++ b/bs-feladatok-sitebuilding/index.html
@@ -7,13 +7,34 @@
         <script src="https://kit.fontawesome.com/e77efaebeb.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
             integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <title>Checkout form</title>
+        <title>Sitebuilding</title>
 
     </head>
 
     <body>
 
-        
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+            <a class="navbar-brand text-warning" href="./index.html">Start Bootstrap</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainMenu">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">Főoldal</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./blog.html">Blog<span class="sr-only">(jelenlegi)></span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./gyik.html">GYIK</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./kapcsolat.html">Kapcsolat</a>
+                    </li>
+                </ul>
+              </div>
+          </nav>
 
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
               integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
