--- a/bs-feladatok-sitebuilding/index.html
+++ b/bs-feladatok-sitebuilding/index.html
@@ -21,16 +21,13 @@
             <div class="collapse navbar-collapse" id="mainMenu">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Főoldal</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="./blog.html">Blog<span class="sr-only">(jelenlegi)></span></a>
+                        <a class="nav-link" href="#">DOWNLOAD</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./gyik.html">GYIK</a>
+                        <a class="nav-link" href="#">FEATURES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./kapcsolat.html">Kapcsolat</a>
+                        <a class="nav-link" href="#">CONTACT</a>
                     </li>
                 </ul>
               </div>
