--- a/bs-feladatok-sitebuilding/index.html
+++ b/bs-feladatok-sitebuilding/index.html
@@ -12,26 +12,47 @@
     </head>
 
     <body>
-
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a class="navbar-brand text-warning" href="./index.html">Start Bootstrap</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mainMenu">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">DOWNLOAD</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">FEATURES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
-                    </li>
-                </ul>
-              </div>
+        <nav class="navbar navbar-expand-md navbar-light fixed-top lato">
+            <div class="container">
+                <a class="navbar-brand text-warning" href="./index.html">Start Bootstrap</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse text-uppercase" id="mainMenu">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Download</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                  </div>
+            </div>
           </nav>
+
+        <header class="header-background">
+        </header>
+        
+        <main>
+            <section>
+            </section>
+
+            <section>
+            </section>
+
+            <section>
+            </section>
+
+            <section>
+            </section>
+        </main>
+
+        <footer>
+        </footer>
 
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
               integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
