--- a/bs-feladatok-sitebuilding/index.html
+++ b/bs-feladatok-sitebuilding/index.html
@@ -7,6 +7,7 @@
         <script src="https://kit.fontawesome.com/e77efaebeb.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
             integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link rel="stylesheet" href="./style.css">
         <title>Sitebuilding</title>
 
     </head>
@@ -32,9 +33,25 @@
                     </ul>
                   </div>
             </div>
-          </nav>
+        </nav>
 
-        <header class="header-background">
+        <header class="vh-100 d-flex flex-column flex-md-row pt-5 justify-content-center align-items-center header-background">
+            <div class="container d-flex flex-column flex-md-row">
+                <div class="col-md-3">
+                    <section class="">
+                        <p class="h3 lato font-weight-normal text-white">
+                            New Age is an app landing page that will help
+                            you beautifully showcase your new mobile app, or anything else!
+                        </p>
+                        <button class="btn btn-outline-light rounded-pill p-3">
+                            Start now for free!
+                        </button>
+                    </section>
+                </div>
+                <aside class="">
+                    <img src="./img/phone.png" width="250px" alt="phone">
+                </aside>
+            </div>
         </header>
         
         <main>
