--- a/bs-feladatok-sitebuilding/index.html
+++ b/bs-feladatok-sitebuilding/index.html
@@ -36,10 +36,10 @@
         </nav>
 
         <header class="vh-100 d-flex flex-column flex-md-row pt-5 justify-content-center align-items-center header-background">
-            <div class="container d-flex flex-column flex-md-row">
-                <div class="col-md-3">
-                    <section class="">
-                        <p class="h3 lato font-weight-normal text-white">
+            <div class="container d-flex flex-column flex-md-row justify-content-center">
+                <div class="col-md-5">
+                    <section class="py-5">
+                        <p class="h3 lato font-weight-normal text-white header-p mb-5 pr-5">
                             New Age is an app landing page that will help
                             you beautifully showcase your new mobile app, or anything else!
                         </p>
