--- a/bs-feladatok-sitebuilding/index.html
+++ b/bs-feladatok-sitebuilding/index.html
@@ -38,7 +38,7 @@
         <header class="vh-100 d-flex flex-column flex-md-row pt-5 justify-content-center align-items-center header-background">
             <div class="container d-flex flex-column flex-md-row justify-content-center">
                 <div class="col-md-5">
-                    <section class="py-5">
+                    <section class="py-2">
                         <p class="h3 lato font-weight-normal text-white header-p mb-5 pr-5">
                             New Age is an app landing page that will help
                             you beautifully showcase your new mobile app, or anything else!
@@ -48,8 +48,9 @@
                         </button>
                     </section>
                 </div>
-                <aside class="">
-                    <img src="./img/phone.png" width="250px" alt="phone">
+                <aside class="col-md-5">
+                    <img class="position-absolute" src="./img/phone.png" width="240px" alt="phone" id="phone">
+                    <img class="position-absolute" src="./img/demo-screen-1.jpg" width="210px" alt="demo-page">
                 </aside>
             </div>
         </header>
