--- a/bs-feladatok-sitebuilding/index.html
+++ b/bs-feladatok-sitebuilding/index.html
@@ -38,8 +38,8 @@
         <header class="vh-100 d-flex flex-column flex-md-row pt-5 justify-content-center align-items-center header-background">
             <div class="container d-flex flex-column flex-md-row justify-content-center">
                 <div class="col-md-5">
-                    <section class="py-2">
-                        <p class="h3 lato font-weight-normal text-white header-p mb-5 pr-5">
+                    <section class="py-2 pr-5">
+                        <p class="h3 lato font-weight-normal text-white header-p mb-5">
                             New Age is an app landing page that will help
                             you beautifully showcase your new mobile app, or anything else!
                         </p>
@@ -48,18 +48,73 @@
                         </button>
                     </section>
                 </div>
-                <aside class="col-md-5">
-                    <img class="position-absolute" src="./img/phone.png" width="240px" alt="phone" id="phone">
-                    <img class="position-absolute" src="./img/demo-screen-1.jpg" width="210px" alt="demo-page">
+                <aside class="col-md-5 ">
+                    <img class="position-absolute pl-5" src="./img/phone.png" width="350px" alt="phone" id="phone">
+                    <img class="position-absolute pl-5" src="./img/demo-screen-1.jpg" width="312px" alt="demo-page">
                 </aside>
             </div>
         </header>
         
         <main>
-            <section>
+            <section class="vh-100 d-flex flex-column flex-md-row pt-5 justify-content-center align-items-center first-sec-background">
+                <div class="container d-flex flex-column flex-md-row justify-content-center">
+                    <div class="col-md-6">
+                        <h1 class="first-sec-h1 font-weight-light text-center">Discover what all the buzz is about!</h1>
+                        <p class="first-sec-p pt-2">Our app is available on any mobile device! Download now to get
+                            started!</p>
+                    </div>
+                </div>
             </section>
 
             <section>
+                <header class="d-flex flex-column align-items-center my-5">
+                    <h1 class="font-weight-light text-center">
+                         Unlimited features, unlimited fun
+                    </h1>
+                    <p class="text-center text-muted">
+                        Check out what you can do with this app theme!
+                    </p>
+                </header>
+    
+                <div class="container d-flex flex-column text-center my-5">
+                    <div class="row">
+
+                        <div class="col-md-5 py-3">
+                            <img class="position-absolute pl-5 " src="./img/phone.png" width="300px" alt="phone" id="phone2">
+                            <img class="position-absolute pl-5 pr-5" src="./img/demo-screen-1.jpg" width="315px" alt="demo-page" id="demo-page2">
+                        </div>
+                        <div class="col-md-6 my-auto pl-5">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <i class="icons fa fa-mobile-alt" aria-hidden="true"></i>
+                                    <hr class="hr">
+                                    <h4 class="catamaran">Device Mockups</h4>
+                                    <span class="muli">Ready to use HTML/CSS device mockups; no Photoshop required!</span>
+                                </div>
+                                <div class="col-md-6">
+                                    <i class="icons fa fa-camera" aria-hidden="true"></i>
+                                    <hr class="hr">
+                                    <h4 class="catamaran">Flexible Use</h4>
+                                    <span class="muli">Put an image, video, animation or anything else in the screen!</span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <i class="icons fa fa-gift" aria-hidden="true"></i>
+                                    <hr class="hr">
+                                    <h4 class="catamaran">Free to use</h4>
+                                    <span class="muli">As always, this theme is free to download and use for any purpose!</span>
+                                </div>
+                                <div class="col-md-6">
+                                    <i class="icons fa fa-unlock-alt" aria-hidden="true"></i>
+                                    <hr class="hr">
+                                    <h4 class="catamaran">Open source</h4>
+                                    <span class="muli">Since this theme is MIT licensed, you can use it commercially!</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section>
