--- a/bs-feladatok-sitebuilding/index.html
+++ b/bs-feladatok-sitebuilding/index.html
@@ -43,7 +43,7 @@
                             New Age is an app landing page that will help
                             you beautifully showcase your new mobile app, or anything else!
                         </p>
-                        <button class="btn btn-outline-light rounded-pill p-3">
+                        <button class="btn btn-outline-light rounded-pill p-3 px-5">
                             Start now for free!
                         </button>
                     </section>
@@ -56,12 +56,26 @@
         </header>
         
         <main>
-            <section class="vh-100 d-flex flex-column flex-md-row pt-5 justify-content-center align-items-center first-sec-background">
-                <div class="container d-flex flex-column flex-md-row justify-content-center">
-                    <div class="col-md-6">
+            <section class="d-flex flex-column py-5 justify-content-center align-items-center yellow-background">
+                <div class="container d-flex flex-column flex-md-row justify-content-center py-5">
+                    <div class="col-md-6 py-5">
                         <h1 class="first-sec-h1 font-weight-light text-center">Discover what all the buzz is about!</h1>
                         <p class="first-sec-p pt-2">Our app is available on any mobile device! Download now to get
                             started!</p>
+                            <div class="row">
+                                <div class="col-8 col-md-4 col-lg-8 offset-2 offset-md-0 offset-lg-2 d-flex flex-column flex-md-row align-items-center justify-content-center">
+                                    <div class="mb-4 mb-md-0 mr-md-2">
+                                        <a class="w-100" href="https://play.google.com/store" target="_blank">
+                                            <img src="./img/google-play-badge.svg" alt="Google play" width="135px">
+                                        </a>
+                                    </div>
+                                    <div class="mb-4 mb-md-0">
+                                         <a class="w-100" href="https://www.apple.com/hu/app-store/" target="_blank">
+                                                <img src="./img/app-store-badge.svg" alt="Apple store" width="135px">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                     </div>
                 </div>
             </section>
@@ -85,13 +99,13 @@
                         </div>
                         <div class="col-md-6 my-auto pl-5">
                             <div class="row">
-                                <div class="col-md-6">
+                                <div class="col-md-6 py-3">
                                     <i class="icons fa fa-mobile-alt" aria-hidden="true"></i>
                                     <hr class="hr">
                                     <h4 class="catamaran">Device Mockups</h4>
                                     <span class="muli">Ready to use HTML/CSS device mockups; no Photoshop required!</span>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6 py-3">
                                     <i class="icons fa fa-camera" aria-hidden="true"></i>
                                     <hr class="hr">
                                     <h4 class="catamaran">Flexible Use</h4>
@@ -99,13 +113,13 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6">
+                                <div class="col-md-6 py-3">
                                     <i class="icons fa fa-gift" aria-hidden="true"></i>
                                     <hr class="hr">
                                     <h4 class="catamaran">Free to use</h4>
                                     <span class="muli">As always, this theme is free to download and use for any purpose!</span>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6 py-3">
                                     <i class="icons fa fa-unlock-alt" aria-hidden="true"></i>
                                     <hr class="hr">
                                     <h4 class="catamaran">Open source</h4>
@@ -117,10 +131,38 @@
                 </div>
             </section>
 
-            <section>
+            <section class="second-sec-background py-5">
+                <div class="container d-flex flex-column justify-content-center py-5">
+                    <div class="col-md-5 py-5">
+                        <section class="py-5 pr-5">
+                            <p class="h3 lato font-weight-normal text-white header-p mb-5">
+                                Stop waiting. Start building.
+                            </p>
+                            <button class="btn btn-outline-light rounded-pill p-3 px-5">
+                                Let's get started!
+                            </button>
+                        </section>
+                    </div>
+                </div>
             </section>
 
-            <section>
+            <section class="d-flex flex-column py-5 justify-content-center align-items-center yellow-background">
+                <div class="container d-flex flex-column flex-md-row justify-content-center py-5">
+                    <div class="col-md-6 py-5">
+                        <div class="text-center font-catamaran we-heart-text py-5">We <i class="red-heart fas fa-heart"></i> new fiends!</div>
+                        <div class="row d-flex justify-content-center py-3">
+                            <div class="icon-container position-relative twitter-container mx-2">
+                              <a href="https://twitter.com/" target=”_blank” class="fa fa-twitter socials-icons"></a>
+                            </div>
+                            <div class="icon-container position-relative facebook-container mx-2">
+                              <a target=”_blank” href="https://facebook.com/" class="fa fa-facebook socials-icons"></a>
+                            </div>
+                            <div class="icon-container position-relative google-container mx-2">
+                              <a target=”_blank” href="https://www.google.com/" class="fa fa-google-plus socials-icons"></a>
+                            </div>
+                          </div>    
+                    </div>
+                </div>
             </section>
         </main>
 
