egy két simítás hiányzik

--- a/bs-feladatok-sitebuilding/index.html
+++ b/bs-feladatok-sitebuilding/index.html
@@ -16,19 +16,19 @@
         <nav class="navbar navbar-expand-md navbar-light fixed-top lato">
             <div class="container">
                 <a class="navbar-brand text-warning" href="./index.html">Start Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="btn-hover navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse text-uppercase" id="mainMenu">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Download</a>
+                            <a class="lato nav-link" href="#">Download</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="lato nav-link" href="#">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="lato nav-link" href="#">Contact</a>
                         </li>
                     </ul>
                   </div>
@@ -39,11 +39,11 @@
             <div class="container d-flex flex-column flex-md-row justify-content-center">
                 <div class="col-md-5">
                     <section class="py-2 pr-5">
-                        <p class="h3 lato font-weight-normal text-white header-p mb-5">
+                        <p class="h3 catamaran font-weight-normal text-white header-p-first mb-5">
                             New Age is an app landing page that will help
                             you beautifully showcase your new mobile app, or anything else!
                         </p>
-                        <button class="btn btn-outline-light rounded-pill p-3 px-5">
+                        <button class="lato btn-hover btn btn-outline-light rounded-pill p-3 px-5 text-uppercase">
                             Start now for free!
                         </button>
                     </section>
@@ -59,8 +59,8 @@
             <section class="d-flex flex-column py-5 justify-content-center align-items-center yellow-background">
                 <div class="container d-flex flex-column flex-md-row justify-content-center py-5">
                     <div class="col-md-6 py-5">
-                        <h1 class="first-sec-h1 font-weight-light text-center">Discover what all the buzz is about!</h1>
-                        <p class="first-sec-p pt-2">Our app is available on any mobile device! Download now to get
+                        <h1 class=" catamaran first-sec-h1 font-weight-normal text-center">Discover what all the buzz is about!</h1>
+                        <p class="muli first-sec-p pt-2">Our app is available on any mobile device! Download now to get
                             started!</p>
                             <div class="row">
                                 <div class="col-8 col-md-4 col-lg-8 offset-2 offset-md-0 offset-lg-2 d-flex flex-column flex-md-row align-items-center justify-content-center">
@@ -80,24 +80,23 @@
                 </div>
             </section>
 
-            <section>
-                <header class="d-flex flex-column align-items-center my-5">
-                    <h1 class="font-weight-light text-center">
+            <section class="py-5">
+                <header class="d-flex flex-column align-items-center py-5">
+                    <h1 class="catamaran font-weight-light text-center">
                          Unlimited features, unlimited fun
                     </h1>
-                    <p class="text-center text-muted">
+                    <p class="muli text-center text-muted pb-5">
                         Check out what you can do with this app theme!
                     </p>
                 </header>
     
-                <div class="container d-flex flex-column text-center my-5">
+                <div class="container d-flex flex-column text-center">
                     <div class="row">
-
-                        <div class="col-md-5 py-3">
-                            <img class="position-absolute pl-5 " src="./img/phone.png" width="300px" alt="phone" id="phone2">
-                            <img class="position-absolute pl-5 pr-5" src="./img/demo-screen-1.jpg" width="315px" alt="demo-page" id="demo-page2">
+                        <div class="col-md-6 py-4">
+                            <img class="position-absolute pl-5 " src="./img/phone.png" width="350px" alt="phone" id="phone2">
+                            <img class="position-absolute pl-5 pr-5" src="./img/demo-screen-1.jpg" width="365px" alt="demo-page" id="demo-page2">
                         </div>
-                        <div class="col-md-6 my-auto pl-5">
+                        <div class="col-md-6 my-auto pl-2 py-5">
                             <div class="row">
                                 <div class="col-md-6 py-3">
                                     <i class="icons fa fa-mobile-alt" aria-hidden="true"></i>
@@ -114,14 +113,14 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6 py-3">
-                                    <i class="icons fa fa-gift" aria-hidden="true"></i>
                                     <hr class="hr">
+                                    <i class="icons fa fa-gift" aria-hidden="true"></i>
                                     <h4 class="catamaran">Free to use</h4>
                                     <span class="muli">As always, this theme is free to download and use for any purpose!</span>
                                 </div>
                                 <div class="col-md-6 py-3">
-                                    <i class="icons fa fa-unlock-alt" aria-hidden="true"></i>
                                     <hr class="hr">
+                                    <i class="icons fa fa-unlock-alt" aria-hidden="true"></i>
                                     <h4 class="catamaran">Open source</h4>
                                     <span class="muli">Since this theme is MIT licensed, you can use it commercially!</span>
                                 </div>
@@ -131,14 +130,14 @@
                 </div>
             </section>
 
-            <section class="second-sec-background py-5">
+            <section class="third-sec-background py-5">
                 <div class="container d-flex flex-column justify-content-center py-5">
-                    <div class="col-md-5 py-5">
+                    <div class="col-md-6 py-5">
                         <section class="py-5 pr-5">
-                            <p class="h3 lato font-weight-normal text-white header-p mb-5">
+                            <p class="h3 catamaran font-weight-normal text-white header-p-second mb-5">
                                 Stop waiting. Start building.
                             </p>
-                            <button class="btn btn-outline-light rounded-pill p-3 px-5">
+                            <button class="lato btn-hover btn btn-outline-light rounded-pill p-3 px-5 text-uppercase">
                                 Let's get started!
                             </button>
                         </section>
@@ -146,19 +145,22 @@
                 </div>
             </section>
 
-            <section class="d-flex flex-column py-5 justify-content-center align-items-center yellow-background">
-                <div class="container d-flex flex-column flex-md-row justify-content-center py-5">
+            <section class="d-flex flex-columnjustify-content-center align-items-center yellow-background">
+                <div class="container d-flex flex-column flex-md-row justify-content-center">
                     <div class="col-md-6 py-5">
-                        <div class="text-center font-catamaran we-heart-text py-5">We <i class="red-heart fas fa-heart"></i> new fiends!</div>
-                        <div class="row d-flex justify-content-center py-3">
+                        <div class="catamaran text-center catamaran we-heart-text pt-3 pb-3">We <i class="red-heart fas fa-heart"></i> new fiends!</div>
+                        <div class="row d-flex justify-content-center pb-3">
                             <div class="icon-container position-relative twitter-container mx-2">
-                              <a href="https://twitter.com/" target=”_blank” class="fa fa-twitter socials-icons"></a>
+                              <a href="https://twitter.com/" target=”_blank” class="fourth-sec-a fa fa-twitter socials-icons"
+                                data-toggle="tooltip" data-placement="top" title="Twitter"></a>
                             </div>
                             <div class="icon-container position-relative facebook-container mx-2">
-                              <a target=”_blank” href="https://facebook.com/" class="fa fa-facebook socials-icons"></a>
+                              <a target=”_blank” href="https://facebook.com/" class="fourth-sec-a fa fa-facebook socials-icons"
+                                data-toggle="tooltip" data-placement="top" title="Facebook"></a>
                             </div>
                             <div class="icon-container position-relative google-container mx-2">
-                              <a target=”_blank” href="https://www.google.com/" class="fa fa-google-plus socials-icons"></a>
+                              <a target=”_blank” href="https://www.google.com/" class="fourth-sec-a fa fa-google-plus socials-icons " 
+                                data-toggle="tooltip" data-placement="top" title="Google"></a>
                             </div>
                           </div>    
                     </div>
@@ -166,18 +168,98 @@
             </section>
         </main>
 
-        <footer>
+        <footer class="container-fluid bg-dark py-4">
+
+            <div class="row d-flex justify-content-center">
+                <div class="col-5 text-center text-muted">
+                  <small class="muli pt-4 mb-3">© Your Website 2018. All Rights Reserved.</small>
+                  <div class="row">
+                    <div class="col-12">
+                        <a class="muli footer-link px-2" data-toggle="modal" data-target="#privacyModal">Privacy</a>
+                        <a class="muli footer-link px-2" data-toggle="modal" data-target="#termsModal">Terms</a>
+                        <a class="muli footer-link px-2" data-toggle="modal" data-target="#FAQModal">FAQ</a>
+                    </div>
+                  </div>  
+                </div>
+            </div>
+
+            <div id="privacyModal" class="modal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Privacy</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Cumque minus dicta odio fugit totam laborum reiciendis, 
+                                alias vero earum quas aliquid officiis provident in nam 
+                                maiores quam sint. Odit, saepe.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+              </div>
+
+            <div id="termsModal" class="modal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Terms</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Cumque minus dicta odio fugit totam laborum reiciendis, 
+                                alias vero earum quas aliquid officiis provident in nam 
+                                maiores quam sint. Odit, saepe.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="FAQModal" class="modal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">FAQ</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Cumque minus dicta odio fugit totam laborum reiciendis, 
+                                alias vero earum quas aliquid officiis provident in nam 
+                                maiores quam sint. Odit, saepe.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            
         </footer>
 
-          <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
               integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
               crossorigin="anonymous"></script>
   
-          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
               integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
               crossorigin="anonymous"></script>
   
-          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
               integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
               crossorigin="anonymous"></script>
     </body>
